2013-07-12      Gaius Mulley <gaius@gnu.org>

	* gm2/gm2spec.c:  get_prefix removed string literal and replaced it with
	  PREFIX.  Fix to call add_link_from_include swapped parameters.  Use
	  unsigned int as a comparison.  Removed unused variable.
	* gm2/Make-lang.in:  add -DPREFIX to the build rule for gm2spec.o.
	* gm2/gm2.texi:  removed item about limitation to link as this is now fixed.
	
2013-07-11      Gaius Mulley <gaius@gnu.org>

	* gm2/gm2-lang.c:  gm2_langhook_getdecls return value from m2block_GetGlobals().
          gm2_langhook_write_globals call write_global_declarations.
	* gm2/gm2spec.c:  (purge_include_options) New function.  Call ge_generate_option
	  if -I is found.
	* gm2/gm2-compiler/M2GenGCC.mod:  corrected dates.
	* gm2/gm2-gcc/m2block.c:  assert_global_names (New function).  m2block_GetGlobals
	  call assert_global_names and return global_binding_level->names.
	* gm2/gm2-gcc/m2block.def:  GetGlobals (New procedure function).
	* gm2/gm2-gcc/m2block.h:  GetGlobals (New procedure function).
	* gm2/gm2-gcc/m2decl.c:  added debugging hooks to detect variables being declared.
	* gm2/gm2spec.c:  convert_include_into_link (New procedure function).

2013-07-08      Gaius Mulley <gaius@gnu.org>

	* gm2/Make-lang.in:  removed installation rules for library modules.
	* gm2/gm2.texi:  added information on how to build gm2 grafted onto gcc-4.7.3.
	* gm2/gm2spec.c:  many changes which reintroduce the gm2 linking mechanism and
	  via specs.  Many changes due to the differences between gcc-4.7.3 and gcc-4.1.2.
	* gm2/lang-specs.h:  corrected dates.
	* gm2/gm2-compiler/M2Defaults.def:  corrected dates.
	* gm2/gm2-compiler/M2Defaults.mod:  corrected dates.
	* gm2/gm2-compiler/M2FileName.def:  corrected dates.
	* gm2/gm2-compiler/M2FileName.mod:  corrected dates.
	* gm2/gm2-compiler/M2Options.mod:  added Debugging and printf1.
	* gm2/gm2-compiler/M2Search.def:  corrected dates.
	* gm2/gm2-compiler/M2Search.mod:  corrected dates.