@@ -1,3 +1,12 @@
+2013-07-15	Gaius Mulley <gaius@gnu.org>
+
+	* gm2/gm2spec.c:  (fe_generate_option) fixed cast to XCNEWVEC.
+	  (printOption) moved function earlier in the file.
+	  (add_library) position is now declared as unsigned int.
+	  (add_library) more debugging, also copy arguments correctly
+	  into the new array.  (lang_specific_driver) corrected strncmp
+	  count.
+
 2013-07-12      Gaius Mulley <gaius@gnu.org>
 
 	* gm2/gm2spec.c:  get_prefix removed string literal and replaced it with
@@ -5,7 +14,7 @@
 	  unsigned int as a comparison.  Removed unused variable.
 	* gm2/Make-lang.in:  add -DPREFIX to the build rule for gm2spec.o.
 	* gm2/gm2.texi:  removed item about limitation to link as this is now fixed.
-	
+
 2013-07-11      Gaius Mulley <gaius@gnu.org>
 
 	* gm2/gm2-lang.c:  gm2_langhook_getdecls return value from m2block_GetGlobals().
